# oncologia

./: .flaskenv  .gitignore  Makefile  README.md  fake_data_generator.py  generate_default_values.py  generate_fake_data.py  pyproject.toml  requirements.txt
instance/: app.db
oncologia/: __init__.py  forms.py  utils.py
oncologia/extensions/: database.py  jija_utils.py  models.py  session.py
oncologia/templates/: base.html
oncologia/templates/auth/: login.html
oncologia/templates/components/: flash_messages.html  navbar.html  pagination.html  patient_card.html  pedency.html  pendency.html  status.html  toast.html
oncologia/templates/home/: index.html  search_patient.html
oncologia/templates/patient/: change_status.html  create.html  create_pendency.html  profile.html
oncologia/templates/plots/: index.html
oncologia/views/: api.py  auth.py  home.py  patient.py  plots.py
